# Ploutos

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  Licence  Makefile  README.md  __init__.py  pyproject.toml  release-please-config.json  semantic-release.yml
.github/workflows/: ci.yml  release-please.yml
back/: .env.local.example  CHANGELOG.md  pyproject.toml  test.csv  transfert_with_account_id.csv
back/ploutos/api/: bank_api.py  deps.py  main.py
back/ploutos/api/routers/: accounts.py  budget.py  categorization_rules.py  matching.py  transactions.py  transfers.py  utils.py
back/ploutos/config/: settings.py
back/ploutos/db/: __init__.py  migrations.py  models.py
back/ploutos/processors/: __init__.py  base.py  loan.py  salary.py  simple_split.py
back/ploutos/services/: matching_service.py
back/ploutos/utils/: date.py  secrets.py  sheet_migration.py
back/ploutos/utils/scraping/: scrap_lcl.py
back/supabase/: config.toml
back/tests/: conftest.py  test_budget.py  test_matching_service.py  test_processor_validation.py  test_secrets.py  test_transactions_split.py  test_transfers.py  test_transfers_integration.py  test_transfers_rejection.py
back/tests/processors/: test_loan_processor.py  test_processor_validation.py  test_simple_split_processor.py
diagrams/: archi_db.md  diagramme_ER.md  process_db.excalidraw
front/: CHANGELOG.md  commitlint.config.js  package-lock.json  package.json
front/src/app/: layout.tsx  page.tsx
front/src/components/: Navigation.tsx  SankeyChart.tsx  (+1 more)
ploutos/: pyproject.toml
ploutos-front/: package-lock.json  package.json
ploutos/api/: bank_api.py  deps.py  main.py  revolut.ipynb
ploutos/config/: settings.py
ploutos/db/: __init__.py  migrations.py  models.py  test_db.ipynb
ploutos/notebook/: migration_sheet.ipynb
ploutos/tests/: test_secrets.py
ploutos/utils/: secrets.py
supabase/: config.toml
supabase/migrations/: 20251219205037_remote_schema.sql  20251225233655_test_rpc_workflow.sql  20251225234637_add_description_filter_to_get_transactions.sql  20251226100605_fix_get_transactions_include_slave_dates.sql  20251226105117_add_filters_to_get_transactions.sql  20251226111439_add_transfer_filter_to_get_transactions.sql  20251226143601_get_patrimony_timeline.sql  20251226144231_fix_patrimony_timeline_delete.sql  20251226153635_fix_budget_consumption_net_spending.sql
(+40 files in other folders)
