[tool.poetry]
name = "ploutos"
version = "0.0.0"
description = ""
authors = ["Jérémy Bon <jeremy.bon1069@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
python-semantic-release = "^9.12.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
remote.type = "gitlab"
commit_parser = "emoji"                               # Gitmoji-based commits


[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

