[tool.poetry]
name = "ploutos"
version = "0.0.0"
description = ""
authors = ["Jérémy Bon <jeremy.bon1069@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
python-semantic-release = "^9.12.0"
isort = "^5.13.2"
commitizen = "^3.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
version = "0.1.0"
update_changelog_on_bump = true
