[tool.poetry]
name = "ploutos"
version = "0.1.0"
description = ""
authors = ["Jérémy Bon <jeremy.bon1069@gmail.com>"]
readme = "README.md"

packages = [
    { include = "ploutos" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
isort = "^5.13.2"
cz-conventional-gitmoji = "^0.6.1"
nordigen = "^1.4.1"
pandas = "^2.2.3"
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"
uvicorn = "^0.34.2"
loguru = "^0.7.3"
fastapi = "^0.115.12"
supabase = "^2.15.1"
google-api-python-client = "^2.170.0"
gocardless-pro = "^3.1.0"
pycryptodome = "^3.23.0"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
python-semantic-release = "^9.12.0"
isort = "^5.13.2"
commitizen = "^3.30.0"
ipykernel = "^6.29.5"
pytest = "^8.4.2"
pandas-stubs = "^2.3.2.250926"
types-tqdm = "^4.67.0.20250809"
httpx = "^0.27.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
version = "0.1.0"
update_changelog_on_bump = true
#name = "cz_gitmoji"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
